--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -33,6 +33,30 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+    		<version>8.0.30</version> <!-- 최신 버전 확인 후 사용 -->
+		</dependency>
+
+		<dependency>
+    		<groupId>org.apache.tomcat</groupId>
+    		<artifactId>tomcat-jdbc</artifactId>
+    		<version>10.1.10</version> <!-- 버전은 최신 버전으로 사용하세요 -->
+		</dependency>
+
+		<dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+    		<version>1.18.30</version> <!-- 최신 버전 사용 -->
+    		<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
@@ -52,6 +76,12 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<dependency>
+		<groupId>com.mysql</groupId>
+		<artifactId>mysql-connector-j</artifactId>
+		<scope>runtime</scope>
+	</dependency>
 
 	<build>
 		<plugins>
