--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=demo
 server.port = 8080
 spring.web.resources.static-locations=classpath:/static/
 spring.datasource.url=jdbc:mysql://localhost:3306/spring?serverTimezone=Asia/Seoul
- spring.datasource.username=hyerin
- spring.datasource.password=20230985!
+spring.datasource.username=hyerin
+spring.datasource.password=20230985!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
- spring.jpa.hibernate.ddl-auto=update
- spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.mvc.hiddenmethod.filter.enabled=true
