--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -92,4 +92,8 @@
 		</plugins>
 	</build>
 
+	<dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-data-jpa</artifactId>
+	</dependency>
 </project>
